@@ -336,7 +336,8 @@ darwin_pragma_unused (cpp_reader *pfile ATTRIBUTE_UNUSED)
       tok = c_lex (&decl);
       if (tok == CPP_NAME && decl)
 	{
-	  tree local = lookup_name (decl);
+	  /* APPLE LOCAL mainline lookup_name 4125055 */
+	  tree local = lookup_name_two (decl, 0);
 	  if (local && (TREE_CODE (local) == PARM_DECL
 			|| TREE_CODE (local) == VAR_DECL))
 	    TREE_USED (local) = 1;
